--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -101,5 +101,8 @@
         <action
             android:id="@+id/action_signUp_2_to_checkPhoneNumber"
             app:destination="@id/checkPhoneNumber" />
+        <action
+            android:id="@+id/action_signUp_2_to_login"
+            app:destination="@id/login" />
     </fragment>
 </navigation>
