--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -105,4 +105,13 @@
             android:id="@+id/action_signUp_2_to_login"
             app:destination="@id/login" />
     </fragment>
+    <fragment
+        android:id="@+id/logout"
+        android:name="com.yu.driver.Logout"
+        android:label="fragment_logout"
+        tools:layout="@layout/fragment_logout" >
+        <action
+            android:id="@+id/action_logout_to_login"
+            app:destination="@id/login" />
+    </fragment>
 </navigation>
