--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,8 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/login">
+    app:startDestination="@id/mainFragment">
 
+    <fragment
+        android:id="@+id/orderListFragment"
+        android:name="com.order.orderListFragment"
+        android:label="fragment_order_list"
+        tools:layout="@layout/fragment_order_list">
+        <action
+            android:id="@+id/action_orderListFragment_to_orderDetailFragment"
+            app:destination="@id/orderDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderDetailFragment"
+        android:name="com.order.orderDetailFragment"
+        android:label="fragment_order_detail"
+        tools:layout="@layout/fragment_order_detail" />
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.lu.driver.MainFragment"
@@ -102,4 +116,59 @@
             android:id="@+id/action_signUp_2_to_checkPhoneNumber"
             app:destination="@id/checkPhoneNumber" />
     </fragment>
+    <fragment
+        android:id="@+id/userFragment"
+        android:name="com.user.userFragment"
+        android:label="fragment_user"
+        tools:layout="@layout/fragment_user" >
+        <action
+            android:id="@+id/action_userFragment_to_userEditFragment"
+            app:destination="@id/userEditFragment" />
+        <action
+            android:id="@+id/action_userFragment_to_userPhotoUpdateFragment"
+            app:destination="@id/userPhotoUpdateFragment" />
+        <action
+            android:id="@+id/action_userFragment_to_driverFilesFragment"
+            app:destination="@id/driverFilesFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/userEditFragment"
+        android:name="com.user.userEditFragment"
+        android:label="fragment_user_edit"
+        tools:layout="@layout/fragment_user_edit" />
+    <fragment
+        android:id="@+id/userPhotoUpdateFragment"
+        android:name="com.user.userPhotoUpdateFragment"
+        android:label="fragment_user_photo_update"
+        tools:layout="@layout/fragment_user_photo_update" />
+    <fragment
+        android:id="@+id/driverLicenceUpdateFragment"
+        android:name="com.user.driverLicenceFragment"
+        android:label="fragment_driver_licence"
+        tools:layout="@layout/fragment_driver_licence" />
+    <fragment
+        android:id="@+id/idUpdateFragment"
+        android:name="com.user.idUpdateFragment"
+        android:label="fragment_id_update"
+        tools:layout="@layout/fragment_id_update" />
+    <fragment
+        android:id="@+id/driverFilesFragment"
+        android:name="com.user.driverFilesFragment"
+        android:label="fragment_driver_files"
+        tools:layout="@layout/fragment_driver_files" >
+        <action
+            android:id="@+id/action_driverFilesFragment_to_idUpdateFragment"
+            app:destination="@id/idUpdateFragment" />
+        <action
+            android:id="@+id/action_driverFilesFragment_to_driverLicenceUpdateFragment"
+            app:destination="@id/driverLicenceUpdateFragment" />
+        <action
+            android:id="@+id/action_driverFilesFragment_to_driverInsuranceUpdateFragment"
+            app:destination="@id/driverInsuranceUpdateFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/driverInsuranceUpdateFragment"
+        android:name="com.user.driverInsuranceUpdateFragment"
+        android:label="fragment_driver_insurance_update"
+        tools:layout="@layout/fragment_driver_insurance_update" />
 </navigation>
