--- a/app/src/main/res/layout/fragment_sign_up_2.xml
+++ b/app/src/main/res/layout/fragment_sign_up_2.xml
@@ -99,6 +99,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDriverSecure" />
 
+    <TextView
+        android:id="@+id/tvUserPhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="120dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/textUserPhoto"
+        app:layout_constraintStart_toEndOf="@+id/tvDriverSecure"
+        app:layout_constraintTop_toBottomOf="@+id/ivLicenseFront" />
+
+    <ImageView
+        android:id="@+id/ivUserPhoto"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/group_367"
+        app:layout_constraintStart_toEndOf="@+id/ivDriverSecure"
+        app:layout_constraintTop_toBottomOf="@+id/tvUserPhoto" />
+
     <Button
         android:id="@+id/btSignUP"
         android:layout_width="wrap_content"
@@ -115,10 +137,8 @@
         android:id="@+id/tvResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="230dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivLicenseBack"
-        android:layout_marginLeft="230dp" />
+        android:layout_marginTop="48dp"
+        app:layout_constraintStart_toEndOf="@+id/ivDriverSecure"
+        app:layout_constraintTop_toBottomOf="@+id/ivLicenseBack" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
