--- a/app/src/main/res/layout/fragment_user_photo_update.xml
+++ b/app/src/main/res/layout/fragment_user_photo_update.xml
@@ -20,14 +20,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="360dp"
-        android:layout_height="360dp"
+        android:layout_width="340dp"
+        android:layout_height="340dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="#BED2F8"
+        android:background="@drawable/main_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvInsuranceName">
